--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- custom css link -->
     <link rel="stylesheet" href="css/style.css" />
-    <title> FANDI </title>
+    <title> FANDI| MAKE YOUR OWN STYLE </title>
     <link rel="icon" href="img/icon.png" type="image/x-icon">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
