--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
     background-image: url(https://raw.githubusercontent.com/ethoart/mistertusker/main/WhatsApp%20Image%202023-06-22%20at%2011.47.19.jpg); /* The image used for background*/
     background-repeat: no-repeat; /* Do not repeat the image */
     background-position: center; /* Center the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-size: fit; /* Resize the background image to cover the entire container */
 }
 
 .container {
@@ -77,9 +77,9 @@ background-color: rgba(156, 39, 176, 0.6) !important;
 
       <!-- Image and name container. Change to your picture here. -->
     <div class="image-container">
-    <img src="https://raw.githubusercontent.com/ethoart/mistertusker/main/FD2CC470-CBA0-4E73-91BD-B1412C1E0532.PNG" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style=":; alt=">
+    <img src="" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style=":; alt=">
      <div class="w3-text-white">
-     <p class="w3-text-white w3-large">MAKE YOUR OWN STYLE !</p>
+     <p class="w3-text-white w3-large"></p>
      <p class="w3-large"><strong></strong></p>
       </div>
 
