--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
     background-image: url(https://raw.githubusercontent.com/ethoart/mistertusker/main/WhatsApp%20Image%202023-06-22%20at%2011.47.19.jpg); /* The image used for background*/
     background-repeat: no-repeat; /* Do not repeat the image */
     background-position: center; /* Center the image */
-    background-size: fit; /* Resize the background image to cover the entire container */
+    background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 .container {
