--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style>
 
 body {
-    background-image: url(https://raw.githubusercontent.com/ethoart/mistertusker/main/WhatsApp%20Image%202023-06-22%20at%2011.47.19.jpg); /* The image used for background*/
+    background-image: url(https://raw.githubusercontent.com/ethoart/mistertusker/main/IMG_6447.JPG); /* The image used for background*/
     background-repeat: no-repeat; /* Do not repeat the image */
     background-position: center; /* Center the image */
     background-size: cover; /* Resize the background image to cover the entire container */
@@ -77,7 +77,7 @@ background-color: rgba(156, 39, 176, 0.6) !important;
 
       <!-- Image and name container. Change to your picture here. -->
     <div class="image-container">
-    <img src="https://raw.githubusercontent.com/ethoart/mistertusker/main/FD2CC470-CBA0-4E73-91BD-B1412C1E0532.PNG" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style=":; alt=">
+    <img src="https://raw.githubusercontent.com/ethoart/mistertusker/main/FC3934C0-00B6-47D9-9AA8-3A9643AE3264.PNG" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style=":; alt=">
      <div class="w3-text-white">
      <p class="w3-text-white w3-large"></p>
      <p class="w3-large"><strong></strong></p>
@@ -85,11 +85,11 @@ background-color: rgba(156, 39, 176, 0.6) !important;
 
     <!-- Links section 1. Replace the # inside of the "" with your links. -->
     <div class="links-container">
-      <a href="#" class="w3-button w3-hover-pink w3-large w3-round w3-black w3-border link" target="https://www.instagram.com/fandi.wears/?igshid=OGQ5ZDc2ODk2ZA%3D%3D"><i class="fab fa-facebook"> </i>INSTAGRAM</a>
+      <a href="https://instagram.com/fandi.wears?igshid=OGQ5ZDc2ODk2ZA==" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-facebook"> </i>INSTAGRAM</a>
       <br>
-      <a href="#" class="w3-button w3-hover-pink w3-large w3-round w3-black w3-border link" target="https://www.facebook.com/fandiwear/"><i class="fab fa-instagram"> </i>FACEBOOK</a>
+      <a href="https://www.facebook.com/fandiwear/" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-instagram"> </i>FACEBOOK</a>
       <br>
-      <a href="#" class="w3-button w3-hover-pink w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-twitter"> </i>WHATSAP</a>
+      <a href="#" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-twitter"> </i>WHATSAP</a>
     </div>
   </div>
 </div>
