--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ background-color: rgba(156, 39, 176, 0.6) !important;
 
     <!-- Links section 1. Replace the # inside of the "" with your links. -->
     <div class="links-container">
-      <a href="https://instagram.com/fandi.wears?igshid=OGQ5ZDc2ODk2ZA==" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-facebook"> </i>INSTAGRAM</a>
+      <a href="https://instagram.com/fandi.wears?igshid=OGQ5ZDc2ODk2ZA==" class="w3-button w3-hover-pink w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-facebook"> </i>INSTAGRAM</a>
       <br>
-      <a href="https://www.facebook.com/fandiwear/" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-instagram"> </i>FACEBOOK</a>
+      <a href="https://www.facebook.com/fandiwear/" class="w3-button w3-hover-blue w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-instagram"> </i>FACEBOOK</a>
       <br>
       <a href="#" class="w3-button w3-hover-green w3-large w3-round w3-black w3-border link" target="_blank"><i class="fab fa-twitter"> </i>WHATSAP</a>
     </div>
