--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 body {
     background-image: url(https://raw.githubusercontent.com/ethoart/mistertusker/main/IMG_6447.JPG); /* The image used for background*/
-    background-repeat: no-repeat; /* Do not repeat the image */
+    background-repeat: repeat; /* Do not repeat the image */
     background-position: center; /* Center the image */
     background-size: cover; /* Resize the background image to cover the entire container */
 }
